# hello-mysql-world

./: CMakeLists.txt  README.md  hello.c
